tuesday_10th_upgrade

--- a/presentation_mock_visit_scotland.html
+++ b/presentation_mock_visit_scotland.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Presentation1</title>
+  <title>Visit Scotland</title>
 
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
@@ -20,7 +20,7 @@
     var SLIDE_CONFIG = {
       // Slide settings
       settings: {
-                title: 'Presentation1',
+                title: 'Visit Scotland',
                         useBuilds: true,
         usePrettify: true,
         enableSlideAreas: true,
@@ -30,7 +30,7 @@
       // Author information
       presenters: [
             {
-        name:  'Juan Ignacio De Vicente' ,
+        name:  'Juan Ignacio De Vicente Ojeda' ,
         company: '',
         gplus: '',
         twitter: '',
@@ -3212,13 +3212,15 @@ slide:not(.current) .plotly.html-widget{
           </hgroup>
   </slide>
 
-<slide class=""><hgroup><h2>VISIT SCOTLAND</h2></hgroup><article  id="visit-scotland">
-
-</article></slide><slide class=""><hgroup><h2>INTRODUCTION</h2></hgroup><article  id="introduction" class="smaller">
+<slide class=""><hgroup><h2>INTRODUCTION</h2></hgroup><article  id="introduction" class="smaller">
 
 <p>IN 2020 JUST BEFORE THE PANDEMIC, VISIT SCOTLAND IN CONJUCTION WITH VISIT ENGLAND AND VISITWALES CHANGE THE PARAMETERS FOR RECORDING THE VISISTS…. SEE THE PDF.</p>
 
 <p>OUR INTENTION IS SHOW A GLIMPSE ABOUT HOW WAS FOR THE COUNTRY THE LAST YEAR 2019 BEFORE THE INTRODUCCTION OF THE NEW METHOD AND THE DISRUPTION CAUSED BY THE PANDEMIC AND THE LOCKDOWNS RESTRICTIONS DURING 2020,2021 AND THE BEGINING OF 2022 PLUS THE CURRENT WORLD ECONOMIC RECESSION.</p>
+
+</article></slide><slide class=""><hgroup><h2>Data Context/ Disclaimer/ Assumptions</h2></hgroup><article  id="data-context-disclaimer-assumptions">
+
+</article></slide><slide class=""><hgroup><h2>Definition of Tourism Activity</h2></hgroup><article  id="definition-of-tourism-activity">
 
 </article></slide><slide class=""><hgroup><h2>Slide with Bullets</h2></hgroup><article  id="slide-with-bullets">
 
