wednesday_11th_upgrade_fail_q9_extension

--- a/presentation_mock_visit_scotland.html
+++ b/presentation_mock_visit_scotland.html
@@ -3222,6 +3222,8 @@ slide:not(.current) .plotly.html-widget{
 
 </article></slide><slide class=""><hgroup><h2>Definition of Tourism Activity</h2></hgroup><article  id="definition-of-tourism-activity">
 
+</article></slide><slide class=""><hgroup><h2>Tourism in Scotland. Q1</h2></hgroup><article  id="tourism-in-scotland.-q1">
+
 </article></slide><slide class=""><hgroup><h2>Slide with Bullets</h2></hgroup><article  id="slide-with-bullets">
 
 <ul>
