wednesday18th0123_update

--- a/xaringan2.html
+++ b/xaringan2.html
@@ -25,7 +25,7 @@ class: center, middle, inverse, title-slide
 ### Tilting at Windmills
 ]
 .date[
-### Today: 2023-01-17
+### Today: 2023-01-18
 ]
 
 ---
@@ -227,11 +227,13 @@ It could be deduced that is not only  how to arrive,it is the offer of activitie
 ## Predictions 
 
 As it was mentioned before the data covers mostly the period 2013- 2019.
--There are few problems to do a prediction. First, the most important is that we are in 2023 and in 2020 and from2019 there is a "substantial changes were introduced as part of a new combined online survey method collecting data on both domestic overnight trips as well as domestic day trips". In my understanding this fact could imply different interpretations and results in Nights, Visits and Expenditure. 
+There are few problems to do a prediction.
+
+-First, the most important is that we are in 2023 and in 2020 and from2019 there is a "substantial changes were introduced as part of a new combined online survey method collecting data on both domestic overnight trips as well as domestic day trips". In my understanding this fact could imply different interpretations and results in Nights, Visits and Expenditure. 
 
 -The second , the china's present and pandemic and lockdown follow for a worldwide economic recession and the consequences after the invasion of Ukraine make less useful a comparison between the forecasting and the reality.
 
-- Third and more important, the data available made unrealistic the idea of a strong prediction. 
+-Third and more important, the data available made unrealistic the idea of a strong prediction. 
 ---
 
 ## Visits
